@@ -378,6 +378,9 @@ Release 1.0 - 2009-03-08
 
 142. NUTCH-684 - Dedup support for Solr. (dogacan)
 
+143. NUTCH-715 - Subcollection plugin doesn't work with default
+     subcollections.xml file (Dmitry Lihachev via siren)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
